# awesome-algorithms

./: .gitignore  CMakeLists.txt  README.md  build_and_test.py
concurrent/: concurrent_stack.hpp
data_structure/: bitwise_segment_tree.hpp  bitwise_segment_tree_single_update_max.cpp  bitwise_segment_tree_single_update_sum.cpp  bitwise_segment_tree_test.cpp  disjoint_set.cpp  disjoint_set.hpp  disjoint_set_2d.hpp  disjoint_set_2d_test.cpp  disjoint_set_test.cpp  heap.cpp  heap.hpp  heap_test.cpp  segment_tree_max_sum.cpp  single_update_segment_tree.hpp  single_update_segment_tree_test.cpp
graph/: dijkstra.cpp  kruskal.cpp  lca.hpp  lca_test.cpp  leetcode_create_tree_graph.cpp  min_cost_flow.cpp  sap_maxflow.cpp  spfa.cpp
math/: gcd.cpp  gcd.hpp  gcd_test.cpp  primes.cpp  primes.hpp  primes_test.cpp  qpow_mod_inverter.cpp
misc/: arrays.cpp  bits.cpp  hashing.hpp  hashing_test.cpp
string/: ext_kmp.cpp  manacher.cpp  manacher.hpp  manacher_test.cpp  simple_trie.hpp  simple_trie_test.cpp  string_hash.cpp  string_utils.cpp  string_utils.hpp  string_utils_test.cpp  trie.hpp  trie_children_array.cpp  trie_children_map.cpp  trie_test.cpp
